--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.makeramen:roundedimageview:2.2.1'
+    compile 'com.jakewharton:butterknife:7.0.1'
 }
